--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
       <h1>Portfolio</h1>
 
       <div class="work">
-        <img src="http://payload492.cargocollective.com/1/12/405267/12149115/CMB_51_670.jpg" alt="hangman">
-
+        <a href="https://github.com/krose1313/Constructor-Hangman" id="hangman_game"><img src="http://payload492.cargocollective.com/1/12/405267/12149115/CMB_51_670.jpg" alt="hangman" class="thumb_nails"/></a>
+        
         <h3>Hangman</h3>
       </div>
       <div class="work">
